--- a/client/src/components/css/layout.css
+++ b/client/src/components/css/layout.css
@@ -168,7 +168,8 @@ ul#nav li a {
    padding: 8px 13px;
    line-height: 32px;
 	text-decoration: none;
-   text-align: left;
+   text-align: right;
+   
    color: #fff;
 
 	-webkit-transition: color .2s ease-in-out;
@@ -181,6 +182,8 @@ ul#nav li a {
 ul#nav li a:active { background-color: transparent !important; }
 ul#nav li.current a { color: #F06000; }
 
+ul#nav li button{text-align:center; margin-top: 5px;padding-top: 5px;height: 40px;position:fixed;right:5px;}
+ul#nav li button#but1{text-align:center; margin-top: 5px;padding-top: 5px;height: 40px;position:fixed;right:110px;}
 
 /* ------------------------------------------------------------------ */
 /* c. About Section
